--- a/src/components/Text/Style.module.scss
+++ b/src/components/Text/Style.module.scss
@@ -1,8 +1,20 @@
 .root {
   background: #f7f7f7;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: auto;
+  margin: 0 0 0.5em;
+  
+  &.backline {
+    text-align: center;
+    &::after {
+      content: "";
+      display: block;
+      width: 30%;
+      position: relative;
+      border-bottom: 1px solid #aaa;
+
+      margin: 15px auto 0;
+    }
+  }
 }
 h1 {
   margin-bottom: 0.5em;
