--- a/src/components/pages/Biography/Biography.module.scss
+++ b/src/components/pages/Biography/Biography.module.scss
@@ -12,3 +12,10 @@
     justify-content: center;
     align-items: center;
 }
+.btmWrap {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 0;
+}
